<?xml version="1.0" encoding="utf-8"?>
<!--
  Preferences for reporting DNC violations on Android.
 
  Copyright (C) 2011, Raj Mathur <raju@kandalaya.org>
 
  This file is part of DNCViolation.
 
  DNCViolation is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  DNCViolation is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
 
  You should have received a copy of the GNU General Public License
  along with DNCViolation.  If not, see <http://www.gnu.org/licenses/>.
  -->
<!-- $Id: preferences.xml 19 2011-09-20 19:59:36Z raju $ -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory android:title="DNC Violation">
		<CheckBoxPreference android:summary="@string/pref_summary_delete_sms_on_report"
			android:title="@string/pref_string_delete_sms_on_report" android:key="@string/pref_key_delete_sms_on_report" android:defaultValue="false"/>
		<EditTextPreference android:key="@string/pref_key_reporting_sms_number"
			android:summary="@string/pref_summary_reporting_sms_number"
			android:title="@string/pref_string_reporting_sms_number" android:defaultValue="@string/default_reporting_sms_number"></EditTextPreference>
	</PreferenceCategory>
</PreferenceScreen>
