<?xml version="1.0" encoding="utf-8"?>
<!--
  Display SMS info layout for reporting DNC violations on Android.
 
  Copyright (C) 2011, Raj Mathur <raju@kandalaya.org>
 
  This file is part of DNCViolation.
 
  DNCViolation is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  DNCViolation is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
 
  You should have received a copy of the GNU General Public License
  along with DNCViolation.  If not, see <http://www.gnu.org/licenses/>.
  -->
<!-- $Id: smsview.xml 9 2011-09-20 19:38:36Z raju $ -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="match_parent"
	android:layout_height="match_parent" android:id="@+id/smsInfo" android:background="@android:color/darker_gray"
	android:padding="10dp">
	<LinearLayout android:layout_height="wrap_content"
		android:layout_width="match_parent" android:id="@+id/linearLayout1">
		<TextView android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_height="wrap_content" android:layout_width="wrap_content"
			android:id="@+id/smsSenderLabel" android:text="@string/sms_view_sender" android:layout_weight="0"></TextView>
		<TextView android:textAppearance="?android:attr/textAppearanceLarge"
			android:layout_height="wrap_content" android:layout_width="wrap_content"
			android:id="@+id/smsSender" android:text="TextView" android:layout_weight="1"></TextView>
	</LinearLayout>
	<LinearLayout android:layout_height="wrap_content"
		android:layout_width="match_parent" android:id="@+id/linearLayout2">
		<TextView android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_height="wrap_content" android:layout_width="wrap_content"
			android:id="@+id/smsDateLabel" android:text="@string/sms_view_date" android:layout_weight="0"></TextView>
		<TextView android:textAppearance="?android:attr/textAppearanceLarge"
			android:layout_height="wrap_content" android:layout_width="wrap_content"
			android:id="@+id/smsDate" android:text="TextView" android:layout_weight="0"></TextView>
	</LinearLayout>
	<TextView android:textAppearance="?android:attr/textAppearanceMedium"
		android:layout_height="wrap_content" android:layout_width="match_parent"
		android:id="@+id/smsText"></TextView>
	<Button android:text="@string/sms_view_done" android:id="@+id/doneButton" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
</LinearLayout>
